k8s/apps/storage/postgres/release.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: storage
  name: postgres
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:14-alpine
          ports:
            - name: postgres
              containerPort: 5432
          volumeMounts:
            - name: vol-storage-postgres
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: vol-storage-postgres
          persistentVolumeClaim:
            claimName: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: storage
spec:
  ports:
    - protocol: TCP
      name: postgres
      port: 5432
  selector:
    app: postgres
